# animbar

./: CMakeLists.txt  INSTALL  README  animbar.rc
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  animbar.h.in  main.cpp
